fixing z-index

--- a/src/components/CameraContainer/CameraContainer.module.scss
+++ b/src/components/CameraContainer/CameraContainer.module.scss
@@ -23,6 +23,8 @@ $camera-container-xlarge-width: $camera-container-xlarge-height * $presentation-
 
 .CameraContainer {
 
+  position: relative;
+  z-index: 3;
   background-color: $camera-container-background;
   @include boxShadow();
 
